samples/_failures_safe/1761040704_822648_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7dbd7e54.c: In function ‘main’:
./samples/SAFE/__tmp_7dbd7e54.c:178:5: error: expected expression at end of input
  178 |     if (token_count >=
      |     ^~
./samples/SAFE/__tmp_7dbd7e54.c:178:5: error: expected declaration or statement at end of input
